# backend/src/validators/activityLogs.validator.ts
@@ -9,6 +9,7 @@ const ENTITY_TYPES = [
   "people",
   "resource",
   "resource_version",
+  "resource_attachment",
   "schedule",
   "user",
 ] as const;
